--- a/competitions/signate-geospatial-2025/notebooks/simple baseline.ipynb
+++ b/competitions/signate-geospatial-2025/notebooks/simple baseline.ipynb
@@ -797,9 +797,9 @@
     {
      "data": {
       "text/plain": [
-       "326764                  210201/210301/210101\n",
-       "134785    320101/310101/321001/321101/320901\n",
-       "147092                  210101/210202/210301\n",
+       "10436                             NaN\n",
+       "128633    210101/210301/320901/210201\n",
+       "287683                  210301/210101\n",
        "Name: building_tag_id, dtype: object"
       ]
      },
@@ -1290,9 +1290,9 @@
     {
      "data": {
       "text/plain": [
-       "44636     200003.0\n",
-       "13427     197101.0\n",
-       "136813    200410.0\n",
+       "166254    200008.0\n",
+       "137010    200111.0\n",
+       "223927    201802.0\n",
        "Name: year_built, dtype: float64"
       ]
      },
@@ -1331,9 +1331,9 @@
     {
      "data": {
       "text/plain": [
-       "183461    2003\n",
-       "293691    2012\n",
-       "334831    2019\n",
+       "27225    2009\n",
+       "2185     1979\n",
+       "68813    2006\n",
        "Name: year_built, dtype: object"
       ]
      },
@@ -1532,8 +1532,8 @@
     "    \"loss_function\" : \"MAE\",\n",
     "    \"task_type\":  \"GPU\",  # CPUで実行する場合はこれを削除\n",
     "    \"random_seed\": 2025,\n",
-    "    \"verbose\": 200,\n",
-    "    \"iterations\": 1000\n",
+    "    \"verbose\": 1000,\n",
+    "    \"iterations\": 5000\n",
     "    \n",
     "}"
    ]
@@ -1562,18 +1562,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.4906492\ttotal: 44.5ms\tremaining: 44.5s\n",
-      "200:\tlearn: 0.2114377\ttotal: 8.07s\tremaining: 32.1s\n",
-      "400:\tlearn: 0.1903429\ttotal: 15.8s\tremaining: 23.6s\n",
-      "600:\tlearn: 0.1795747\ttotal: 23.6s\tremaining: 15.7s\n",
-      "800:\tlearn: 0.1728849\ttotal: 31.4s\tremaining: 7.8s\n",
-      "999:\tlearn: 0.1681025\ttotal: 39.3s\tremaining: 0us\n"
+      "0:\tlearn: 0.4906493\ttotal: 44.6ms\tremaining: 3m 43s\n",
+      "1000:\tlearn: 0.1680733\ttotal: 39.4s\tremaining: 2m 37s\n",
+      "2000:\tlearn: 0.1543189\ttotal: 1m 18s\tremaining: 1m 57s\n",
+      "3000:\tlearn: 0.1470533\ttotal: 1m 57s\tremaining: 1m 17s\n",
+      "4000:\tlearn: 0.1421219\ttotal: 2m 35s\tremaining: 38.9s\n",
+      "4999:\tlearn: 0.1382865\ttotal: 3m 13s\tremaining: 0us\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x796b89d75e50>"
+       "<catboost.core.CatBoostRegressor at 0x7955a6abb150>"
       ]
      },
      "execution_count": 43,
@@ -1613,14 +1613,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAPE Errror  0.1581814316688061\n"
+      "MAPE Error  0.13126594481553186\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import mean_absolute_percentage_error\n",
     "mape_error = mean_absolute_percentage_error(train_money_room, train_pred)\n",
-    "print(\"MAPE Errror \", mape_error)"
+    "print(\"MAPE Error \", mape_error)"
    ]
   },
   {
@@ -1710,102 +1710,102 @@
        "    <tr>\n",
        "      <th>92</th>\n",
        "      <td>house_area</td>\n",
-       "      <td>16.417304</td>\n",
+       "      <td>13.976670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>year_built</td>\n",
-       "      <td>13.964349</td>\n",
+       "      <td>12.145137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
        "      <td>City/town/village name</td>\n",
-       "      <td>10.129878</td>\n",
+       "      <td>8.935511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>full_address</td>\n",
-       "      <td>6.208309</td>\n",
+       "      <td>5.211523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>madori_kind_all</td>\n",
-       "      <td>5.531185</td>\n",
+       "      <td>4.587941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>building_create_date</td>\n",
-       "      <td>3.928892</td>\n",
+       "      <td>3.457771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>86</th>\n",
        "      <td>snapshot_land_area</td>\n",
-       "      <td>2.584236</td>\n",
+       "      <td>2.820824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
        "      <td>eki_name1</td>\n",
-       "      <td>2.382676</td>\n",
+       "      <td>2.511949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68</th>\n",
        "      <td>post1</td>\n",
-       "      <td>2.325032</td>\n",
+       "      <td>2.427292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78</th>\n",
        "      <td>walk_distance1</td>\n",
-       "      <td>2.183261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>money_kyoueki</td>\n",
-       "      <td>1.838407</td>\n",
+       "      <td>2.185876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
        "      <td>Prefecture name</td>\n",
-       "      <td>1.776709</td>\n",
+       "      <td>2.015765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>money_kyoueki</td>\n",
+       "      <td>1.801650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>floor_count</td>\n",
-       "      <td>1.666817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>target_ym</td>\n",
-       "      <td>1.218072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>408</th>\n",
-       "      <td>statuses 浴室乾燥機</td>\n",
-       "      <td>1.119473</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>bus_time1</td>\n",
-       "      <td>1.100774</td>\n",
+       "      <td>1.690840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>lon</td>\n",
-       "      <td>1.087502</td>\n",
+       "      <td>1.398906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>el</td>\n",
-       "      <td>1.063501</td>\n",
+       "      <th>0</th>\n",
+       "      <td>target_ym</td>\n",
+       "      <td>1.286192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
        "      <td>rosen_name1</td>\n",
-       "      <td>1.051366</td>\n",
+       "      <td>1.277221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>addr2_name</td>\n",
-       "      <td>0.846282</td>\n",
+       "      <th>73</th>\n",
+       "      <td>el</td>\n",
+       "      <td>1.253756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>bus_time1</td>\n",
+       "      <td>1.042773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>lat</td>\n",
+       "      <td>1.023507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>statuses 浴室乾燥機</td>\n",
+       "      <td>0.978283</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1813,26 +1813,26 @@
       ],
       "text/plain": [
        "               feature_name  importance\n",
-       "92               house_area   16.417304\n",
-       "18               year_built   13.964349\n",
-       "134  City/town/village name   10.129878\n",
-       "10             full_address    6.208309\n",
-       "98          madori_kind_all    5.531185\n",
-       "3      building_create_date    3.928892\n",
-       "86       snapshot_land_area    2.584236\n",
-       "75                eki_name1    2.382676\n",
-       "68                    post1    2.325032\n",
-       "78           walk_distance1    2.183261\n",
-       "99            money_kyoueki    1.838407\n",
-       "133         Prefecture name    1.776709\n",
-       "16              floor_count    1.666817\n",
-       "0                 target_ym    1.218072\n",
-       "408          statuses 浴室乾燥機    1.119473\n",
-       "77                bus_time1    1.100774\n",
-       "11                      lon    1.087502\n",
-       "73                       el    1.063501\n",
-       "74              rosen_name1    1.051366\n",
-       "70               addr2_name    0.846282"
+       "92               house_area   13.976670\n",
+       "18               year_built   12.145137\n",
+       "134  City/town/village name    8.935511\n",
+       "10             full_address    5.211523\n",
+       "98          madori_kind_all    4.587941\n",
+       "3      building_create_date    3.457771\n",
+       "86       snapshot_land_area    2.820824\n",
+       "75                eki_name1    2.511949\n",
+       "68                    post1    2.427292\n",
+       "78           walk_distance1    2.185876\n",
+       "133         Prefecture name    2.015765\n",
+       "99            money_kyoueki    1.801650\n",
+       "16              floor_count    1.690840\n",
+       "11                      lon    1.398906\n",
+       "0                 target_ym    1.286192\n",
+       "74              rosen_name1    1.277221\n",
+       "73                       el    1.253756\n",
+       "77                bus_time1    1.042773\n",
+       "12                      lat    1.023507\n",
+       "408          statuses 浴室乾燥機    0.978283"
       ]
      },
      "execution_count": 49,
@@ -1928,12 +1928,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1.485740e+07</td>\n",
+       "      <td>1.411234e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2.197362e+07</td>\n",
+       "      <td>2.052801e+07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1941,8 +1941,8 @@
       ],
       "text/plain": [
        "   id    money_room\n",
-       "0   0  1.485740e+07\n",
-       "1   1  2.197362e+07"
+       "0   0  1.411234e+07\n",
+       "1   1  2.052801e+07"
       ]
      },
      "execution_count": 52,
